Verify / Changed the identity document / FIxed the issues on small desktops

--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -16,7 +16,7 @@
             width: 65%;
             height: 3px;
             margin: 0 auto;
-            margin-bottom: 80px;
+            margin-bottom: 40px;
             background-color: white;
         }
         &-progress {
@@ -413,7 +413,6 @@
         display: flex;
         justify-content: center;
         margin: 50px 0;
-        padding-bottom: 50px;
         .btn-primary,
         .btn-green,
         .btn-ready {
